# lux

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/lux-core/: Cargo.toml
crates/lux-core/src/: action.rs  config.rs  error.rs  item.rs  lib.rs  selection.rs
crates/lux-lua-runtime/: Cargo.toml
crates/lux-lua-runtime/src/: lib.rs
crates/lux-plugin-api/: Cargo.toml
crates/lux-plugin-api/src/: context.rs  effect.rs  hooks.rs  keymap.rs  lib.rs  registry.rs  types.rs  views.rs
crates/lux-plugin-api/src/engine/: mod.rs  observable_view_stack.rs
crates/lux-plugin-api/src/engine/engine_impl/: actions.rs  mod.rs  sources.rs  triggers.rs  types.rs
crates/lux-plugin-api/src/lua/: bridge.rs  mod.rs  parse.rs
crates/lux-ui/: Cargo.toml
crates/lux-ui/src/: actions.rs  backend.rs  keymap.rs  lib.rs  main.rs  window.rs
crates/lux-ui/src/model/: mod.rs  state.rs
crates/lux-ui/src/platform/: macos.rs  mod.rs
crates/lux-ui/src/theme/: mod.rs
crates/lux-ui/src/views/: launcher_panel.rs  mod.rs  results_panel.rs  search_input.rs
src/: App.css  App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  error.rs  events.rs  lib.rs  lua_runtime.rs
src-tauri/src/platform/: macos.rs  mod.rs
src-tauri/src/plugin_api/: ARCHITECTURE.md  WRITING_PLUGINS.md  context.rs  effect.rs  engine.rs  error.rs  handle.rs  mod.rs  registry.rs  types.rs
src-tauri/src/plugin_api/engine/engine_impl/: actions.rs  mod.rs  selection.rs  sources.rs  triggers.rs  view_stack.rs
src-tauri/src/plugin_api/lua/: bridge.rs  mod.rs  parse.rs
src/commands/: actions.ts  index.ts  navigation.ts  search.ts
src/components/: ActionMenu.tsx  ViewStack.tsx
src/components/command/: context.ts  index.tsx
src/components/search/: GroupedResults.tsx  ItemIcon.tsx  SearchResultItem.tsx  index.tsx
src/core/: tauri.ts  types.ts
src/features/actions/: index.ts
src/features/actions/hooks/: useActions.ts
src/features/actions/hooks/__tests__/: useActions.test.ts
src/features/search/: index.ts
src/features/search/hooks/: useSearch.ts
src/features/search/hooks/__tests__/: useSearch.test.ts
src/lib/: actionFeedback.ts  config.ts  debounce.ts  result.ts
src/shared/hooks/: index.ts  useGlobalKeyboard.ts  usePanelLifecycle.ts  useTauriEvents.ts
src/store/: index.ts  launcher.tsx
src/store/__tests__/: launcher.test.ts
src/test/: setup.ts  utils.tsx
