[package]
name = "lux-plugin-api"
description = "Plugin API for the Lux launcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
lux-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
mlua.workspace = true
parking_lot.workspace = true
uuid.workspace = true
tracing.workspace = true
wait-timeout.workspace = true
dirs.workspace = true
tokio.workspace = true

[dev-dependencies]
mockall.workspace = true
tempfile.workspace = true
